Add Google search

--- a/talks/purely-functional-data-structures/index.html
+++ b/talks/purely-functional-data-structures/index.html
@@ -254,6 +254,9 @@
             <blockquote>
                 The state of a new collection instance may not have been "published" (in the sense of the Java Memory Model specification), so that an unsynchronized non-volatile read from another thread may observe the object in an invalid state
             </blockquote>
+        </section>
+
+        <section>
             <h3><a href="https://github.com/scala/bug/issues/7838">https://github.com/scala/bug/issues/7838</a> </h3>
             <br>
             <blockquote>
@@ -652,6 +655,10 @@
             <h4>A trie for keys "A", "to", "tea", "ted", "ten", "i", "in", and "inn" with random values</h4>
             <small><a href="https://en.wikipedia.org/wiki/Trie">https://en.wikipedia.org/wiki/Trie</a> </small>
 
+        </section>
+
+        <section>
+            <img src="img/lucky.png" width="40%"/>
         </section>
 
         <section>
