--- a/talks/purely-functional-data-structures/index.html
+++ b/talks/purely-functional-data-structures/index.html
@@ -600,15 +600,25 @@
 
         <section>
             <h3>Can we do something... smarter?</h3>
+
+            <h3 class="fragment">We could use a tree</h3>
         </section>
 
         <section>
-            <h2>2-3 Tree</h2>
-
-            <img src="img/finger-tree-0.png" width="80%"/>
-
+            <h3>Path copying</h3>
+            <img src="img/before.png" width="80%"/>
         </section>
 
+        <section>
+            <h3>Path copying</h3>
+            <img src="img/after.png" width="80%"/>
+        </section>
+
+
+        <section>
+            <h2>2-3 Tree</h2>
+            <img src="img/finger-tree-0.png" width="80%"/>
+        </section>
 
         <section>
             <h2>2-3 Finger Tree</h2>
