--- a/talks/purely-functional-data-structures/index.html
+++ b/talks/purely-functional-data-structures/index.html
@@ -84,7 +84,7 @@
 
         <section>
             <h2>Questions?</h2>
-            <h2>https://wall2.sli.do/event/kaaafqla </h2>
+            <img src="img/slido.png" width="50%"/>
         </section>
 
         <section>
