--- a/talks/purely-functional-data-structures/index.html
+++ b/talks/purely-functional-data-structures/index.html
@@ -542,6 +542,41 @@
         </section>
 
         <section>
+        </section>
+
+        <section>
+            <h2>Persistent Set</h2>
+
+            <pre class="fragment"><code data-trim="">
+                class Set&lt;T> {
+                    private final List&lt;T> set;
+                }
+            </code></pre>
+            <h3 class="fragment">Highly inefficient because of O(N) element access</h3>
+        </section>
+
+        <section>
+            <h3>Can we do something... smarter?</h3>
+            <br>
+            <h3 class="fragment">We could use a tree</h3>
+        </section>
+
+        <section>
+            <h3>Path copying</h3>
+            <img src="img/before.png" width="80%"/>
+        </section>
+
+        <section>
+            <h3>Path copying</h3>
+            <img src="img/after.png" width="80%"/>
+        </section>
+
+        <section>
+            <h3>Subtrees not on the path can be shared</h3>
+            <img src="img/s-sharing.png" width="80%"/>
+        </section>
+
+        <section>
             <h3>Persistent Queue</h3>
 
             <pre class="fragment"><code data-trim="">
@@ -603,22 +638,6 @@
             <br>
             <h3 class="fragment">We could use a tree</h3>
         </section>
-
-        <section>
-            <h3>Path copying</h3>
-            <img src="img/before.png" width="80%"/>
-        </section>
-
-        <section>
-            <h3>Path copying</h3>
-            <img src="img/after.png" width="80%"/>
-        </section>
-
-        <section>
-            <h3>Subtrees not on the path can be shared</h3>
-            <img src="img/s-sharing.png" width="80%"/>
-        </section>
-
 
         <section>
             <h2>2-3 Tree</h2>
