--- a/talks/purely-functional-data-structures/index.html
+++ b/talks/purely-functional-data-structures/index.html
@@ -701,7 +701,7 @@
             <br>
             <small><a href="https://idea.popcount.org/2012-07-25-introduction-to-hamt/">https://idea.popcount.org/2012-07-25-introduction-to-hamt/</a> </small>
 
-            <h3 class="fragment">Can be further optimized by using bitmaps</h3>
+            <h3 class="fragment">Space efficiency can be increased by using bitmaps</h3>
         </section>
 
         <section>
