--- a/talks/purely-functional-data-structures/index.html
+++ b/talks/purely-functional-data-structures/index.html
@@ -727,23 +727,8 @@
             <li>Trade-offs are everywhere</li>
         </section>
 
+        <section></section>
 
-<!--        <section>-->
-<!--            TODO-->
-       <!-- https://medium.com/@johnmcclean/dysfunctional-programming-in-java-7-immutable-collections-83ba78aaf4dd
-        http://andrew.gibiansky.com/blog/haskell/finger-trees/
-        https://github.com/vavr-io/vavr/issues/569-->
-<!--            http://stackoverflow.com/questions/1990464/efficiency-of-purely-functional-programming-->
-<!--            https://blogs.oracle.com/jrose/larval-objects-in-the-vm-->
-<!--            https://patentimages.storage.googleapis.com/17/1b/f8/9b0c4ee3cf377f/US6438560.pdf-->
-<!--            https://github.com/scala/bug/issues/7838-->
-<!--            https://stackoverflow.com/questions/41934690/are-scala-immutable-collections-thread-safe-->
-<!--        </section>-->
-
-
-        <section>
-
-        </section>
         <section>
             <h1>{ <a href="http://4comprehension.com/">4comprehension.com</a> }</h1>
             <h2>Lead Software Engineer @ <a href="https://twitter.com/CasumoTech">CasumoTech</a></h2>
