Note about Banker's Queue

--- a/talks/purely-functional-data-structures/index.html
+++ b/talks/purely-functional-data-structures/index.html
@@ -659,7 +659,8 @@
         <section>
             <h3>...if it's so smart, why does Scala use Banker's Queue?</h3>
             <br>
-            <h3 class="fragment">It's much more cache-friendly</h3>
+            <h3 class="fragment">Insertions/removals are cheaper</h3>
+            <h3 class="fragment">It's much more cache-friendly*</h3>
         </section>
 
         <section>
@@ -728,6 +729,11 @@
         </section>
 
         <section></section>
+
+        <section>
+            <li>"Ideal Hash Trees", Phil Bagwell</li>
+            <li>"Fast And Space Efficient Trie Searches", Phil Bagwell</li>
+        </section>
 
         <section>
             <h1>{ <a href="http://4comprehension.com/">4comprehension.com</a> }</h1>
