--- a/talks/purely-functional-data-structures/index.html
+++ b/talks/purely-functional-data-structures/index.html
@@ -702,7 +702,16 @@
             <br>
             <small><a href="https://idea.popcount.org/2012-07-25-introduction-to-hamt/">https://idea.popcount.org/2012-07-25-introduction-to-hamt/</a> </small>
 
+            <h3 class="fragment">Node can hold up to 32 elements (branching factor = 32)</h3>
             <h3 class="fragment">Space efficiency can be increased by using bitmaps</h3>
+        </section>
+
+        <section>
+            <h3>Lookup: log_32(N)</h3>
+            <br>
+            <h3 class="fragment">log_32(Integer.MAX_VALUE) ~ 6</h3>
+            <br>
+            <h3 class="fragment">log_32(Long.MAX_VALUE) ~ 13</h3>
         </section>
 
         <section>
