--- a/talks/purely-functional-data-structures/index.html
+++ b/talks/purely-functional-data-structures/index.html
@@ -740,8 +740,11 @@
         <section></section>
 
         <section>
-            <li>"Ideal Hash Trees", Phil Bagwell</li>
-            <li>"Fast And Space Efficient Trie Searches", Phil Bagwell</li>
+            <li>Purely Functional Data Structures, Chris Okasaki</li>
+            <li>Red-Black Trees in a Functional Setting, Chris Okasaki</li>
+            <li>Ideal Hash Trees, Phil Bagwell</li>
+            <li>Fast And Space Efficient Trie Searches, Phil Bagwell</li>
+            <li>Cache-Aware Lock-Free Concurrent Hash Tries, Prokopec, Bagwell, Odersky</li>
             <li>https://shipilev.net/jvm/anatomy-quarks/11-moving-gc-locality/</li>
         </section>
 
