--- a/talks/wip/pragmatic-fp/index.html
+++ b/talks/wip/pragmatic-fp/index.html
@@ -73,6 +73,66 @@
             </blockquote>
         </section>
 
+        <section>
+            <h2>What's Object-Oriented Programming?</h2>
+            <h3>OOP Pillars:</h3>
+            <li>Encapsulation</li>
+            <li>Inheritance</li>
+            <li>Polymorphism</li>
+            <li>Abstraction</li>
+        </section>
+
+        <section>
+            <h2>What's Functional Programming?</h2>
+            <h3>FP Pillars:</h3>
+            <li>Immutability</li>
+            <li>Purity (Referential Transparency)</li>
+            <li>Type-Driven Development</li>
+            <li>Declarative Programming</li>
+            <li>Function Composition</li>
+            <li>Equational Reasoning</li>
+        </section>
+
+        <section>
+            <h2>Immutability</h2>
+            <blockquote>It's impossible to change object's state after its creation</blockquote>
+            <li>Simplified Reasoning</li>
+            <li>Thread Safety</li>
+            <li>Reduced Number of Moving Parts and Invalid States</li>
+        </section>
+
+        <section>
+            <h2>Purity</h2>
+            <blockquote>Functions/Methods are pure when they have no dependencies on internal/external state, and don't do any side-effects</blockquote>
+            <li>Simplified Reasoning</li>
+            <li>Simplified Testing</li>
+            <li>Memoizable (cacheable)</li>
+        </section>
+
+        <section>
+            <h2>Type-Driven Development</h2>
+            <blockquote>TODO</blockquote>
+            <li>TODO</li>
+            <li>TODO</li>
+            <li>TODO</li>
+        </section>
+
+        <section>
+            <h2>Function Composition</h2>
+            <blockquote>TODO</blockquote>
+            <li>TODO</li>
+            <li>TODO</li>
+            <li>TODO</li>
+        </section>
+
+        <section>
+            <h2>Equational Reasoning</h2>
+            <blockquote>TODO</blockquote>
+            <li>TODO</li>
+            <li>TODO</li>
+            <li>TODO</li>
+        </section>
+
 
         <section>
             <h2>Thank You!</h2>
