Add Compressed Hash-Array Mapped Prefix-Tree

--- a/talks/purely-functional-data-structures/index.html
+++ b/talks/purely-functional-data-structures/index.html
@@ -735,6 +735,18 @@
         </section>
 
         <section>
+            <h2>Compressed Hash-Array Mapped Prefix-Tree</h2>
+            <h4>for better locality</h4>
+            <br>
+            <h3>Scala's HashMap since 2.13</h3>
+
+            <small><a href="https://michael.steindorfer.name/publications/oopsla15.pdf">https://michael.steindorfer.name/publications/oopsla15.pdf</a> </small>
+
+
+
+        </section>
+
+        <section>
             <h3><a href="https://arxiv.org/pdf/1709.06056.pdf">Cache-Aware Lock-Free Concurrent Hash Tries</a> </h3>
 
             <img src="img/ctries.png" width="30%"/>
