--- a/talks/wip/future-of-java/index.html
+++ b/talks/wip/future-of-java/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
 
-    <title>Pragmatic Functional Programming in Java</title>
+    <title>Future of Java</title>
 
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
@@ -53,26 +53,26 @@
 <div class="reveal">
 
     <div class="footer">
-        <small><a href="http://twitter.com/pivovarit">@pivovarit</a></small>
+<!--        <small><a href="http://twitter.com/pivovarit">@pivovarit</a></small>-->
     </div>
 
     <!-- Any section element inside of this container is displayed as a slide -->
     <div class="slides">
 
         <section>
-            <h1>Pragmatic Functional Programming in Java</h1>
+            <h1>The Future of Java</h1>
+            <img width="20%" src="img/skynet.png"/>
             <br>
             <h2><a href="http://pivovarit.github.io"> Grzegorz Piwowarek</a></h2>
             <h3><a href="http://twitter.com/pivovarit">@pivovarit</a></h3>
         </section>
 
         <section>
-
-            <blockquote>
-                Happy families are all alike; every unhappy family is unhappy in its own way. — Tolstoy: Anna Karenina
-            </blockquote>
+            <h2>Project Valhalla</h2>
+            <h2>Project Amber</h2>
+            <h2>Project Loom</h2>
+            <h2>Project Panama</h2>
         </section>
-
 
         <section>
             <h2>Thank You!</h2>
