--- a/talks/wip/javan/index.html
+++ b/talks/wip/javan/index.html
@@ -100,6 +100,8 @@
             <h2>JEP 158: Unified JVM Logging</h2>
             <br>
             <blockquote>Introduce a common logging system for all components of the JVM.</blockquote>
+
+            <blockquote>-Xlog:gc*=info</blockquote>
         </section>
         <section>
             <h2>JEP 193: Variable Handles</h2>
@@ -233,7 +235,7 @@
             <h2>JEP 310: Application Class-Data Sharing</h2>
             <br>
             <blockquote>To improve startup and footprint, extend the existing Class-Data Sharing ("CDS") feature to allow application classes to be placed in the shared archive.</blockquote>
-        <blockquote>We can save about 340MB of RAM for a Java EE app server that includes 6 JVM processes consuming a total of 13GB of RAM (~2GB of that is for class meta data).</blockquote>
+            <blockquote>We can save about 340MB of RAM for a Java EE app server that includes 6 JVM processes consuming a total of 13GB of RAM (~2GB of that is for class meta data).</blockquote>
         </section>
 
         <section>
