--- a/talks/index.html
+++ b/talks/index.html
@@ -46,7 +46,7 @@
     <tr>
         <td>72.</td>
         <td data-location="51.247313,22.549545" data-place="Lubelskie Centrum Konferencyjne">IT Non Stop J-Santa 2019</td>
-        <td><a href="https://j-santa.pl">Purely Functional Data Structures</a></td>
+        <td><a href="https://j-santa.pl">Purely Dysfunctional Data Structures</a></td>
         <td>30.11.2019</td>
         <td>Lublin/Poland</td>
     </tr>
@@ -54,7 +54,7 @@
     <tr>
         <td>71.</td>
         <td data-location="59.444370, 24.751092" data-place="Kultuurikatel">GeekOUT 2019</td>
-        <td><a href="https://2019.geekout.ee">Purely Functional Data Structures</a></td>
+        <td><a href="https://2019.geekout.ee">Purely Dysfunctional Data Structures</a></td>
         <td>26.09.2019</td>
         <td>Tallinn/Estonia</td>
     </tr>
@@ -70,7 +70,7 @@
     <tr>
         <td>69.</td>
         <td data-location="49.843717, 24.025646" data-place="Lviv Panorama Hotel">CoffeeJUG Lviv</td>
-        <td><a href="">Purely Disfunctional Data Structures</a></td>
+        <td><a href="https://coffeejug-july-19.2event.com">Purely Dysfunctional Data Structures</a></td>
         <td>11.07.2019</td>
         <td>Lviv/Ukraine</td>
     </tr>
