--- a/talks/purely-functional-data-structures/index.html
+++ b/talks/purely-functional-data-structures/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
 
-    <title>Purely Functional Data Structures</title>
+    <title>Purely Dysfunctional Data Structures</title>
 
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
@@ -60,7 +60,7 @@
     <div class="slides">
 
         <section>
-            <h1>Purely Functional Data Structures</h1>
+            <h1>Purely Dysfunctional Data Structures</h1>
             <h4>Practical Side of Implementing Immutable Structures</h4>
             <br>
             <br>
