--- a/talks/purely-functional-data-structures/index.html
+++ b/talks/purely-functional-data-structures/index.html
@@ -53,7 +53,7 @@
 <div class="reveal">
 
     <div class="footer">
-        <small><a href="http://twitter.com/pivovarit">@pivovarit</a></small>
+        <small><a href="http://twitter.com/pivovarit">Twitter: @pivovarit</a></small>
     </div>
 
     <!-- Any section element inside of this container is displayed as a slide -->
