--- a/talks/wip/pragmatic-fp/index.html
+++ b/talks/wip/pragmatic-fp/index.html
@@ -69,18 +69,21 @@
         <section>
 
             <blockquote>
-                Happy families are all alike; every unhappy family is unhappy in its own way. — Tolstoy: Anna Karenina
+                Happy families are all alike; every unhappy family is unhappy in its own way. 
+                <br>
+                <br>
+                — Tolstoy: Anna Karenina
             </blockquote>
         </section>
 
         <section>
             <h2>What's Object-Oriented Programming?</h2>
             <h3>OOP Pillars:</h3>
-            <div class="fragment">
-                <li>Encapsulation</li>
-                <li>Inheritance</li>
-                <li>Polymorphism</li>
-                <li>Abstraction</li>
+            <div>
+                <li class="fragment">Encapsulation</li>
+                <li class="fragment">Inheritance</li>
+                <li class="fragment">Polymorphism</li>
+                <li class="fragment">Abstraction</li>
             </div>
         </section>
 
@@ -88,12 +91,12 @@
             <h2>What's Functional Programming?</h2>
             <br>
             <h3>FP Pillars:</h3>
-            <li>Immutability</li>
-            <li>Purity (Referential Transparency)</li>
-            <li>Type-Driven Development</li>
-            <li>Declarative Programming</li>
-            <li>Function Composition</li>
-            <li>Equational Reasoning</li>
+            <li class="fragment">Immutability</li>
+            <li class="fragment">Purity (Referential Transparency)</li>
+            <li class="fragment">Type-Driven Development</li>
+            <li class="fragment">Declarative Programming</li>
+            <li class="fragment">Function Composition</li>
+            <li class="fragment">Equational Reasoning</li>
         </section>
 
         <section>
@@ -133,6 +136,11 @@
             <h2>Equational Reasoning</h2>
             <br>
             <li>The power of substitution</li>
+        </section>
+
+        <section>
+            <h2>OOP/FP</h2>
+            <h3>Do these really go against each other?</h3>
         </section>
 
         <section>
@@ -201,8 +209,8 @@
         </section>
 
         <section>
-            <h2>Thank You!</h2>
-            <h3><a href="http://twitter.com/pivovarit">@pivovarit</a></h3>
+             <pre><code data-trim="">//TODO: insert some livecoding here</code></pre>
+            <h2></h2>
         </section>
     </div>
 </div>
