--- a/talks/index.html
+++ b/talks/index.html
@@ -84,6 +84,14 @@
     </tr>
         
     <tr>
+        <td>75.</td>
+        <td data-location="50.012639, 19.924074" data-place="Hotel Metropolo">JDD 2019</td>
+        <td><a href="https://jdd.org.pl">Java, Versioning && Licensing - AMA/a></td>
+        <td>14.10.2019</td>
+        <td>Cracow/Poland</td>
+    </tr>
+        
+    <tr>
         <td>74.</td>
         <td data-location="50.012639, 19.924074" data-place="Hotel Metropolo">JDD 2019</td>
         <td><a href="https://jdd.org.pl">Purely Dysfunctional Data Structures</a></td>
