--- a/talks/index.html
+++ b/talks/index.html
@@ -86,7 +86,7 @@
     <tr>
         <td>75.</td>
         <td data-location="50.012639, 19.924074" data-place="Hotel Metropolo">JDD 2019</td>
-        <td><a href="https://jdd.org.pl">Java, Versioning && Licensing - AMA/a></td>
+        <td><a href="https://jdd.org.pl">Java, Versioning && Licensing - AMA</a></td>
         <td>14.10.2019</td>
         <td>Cracow/Poland</td>
     </tr>
