--- a/talks/index.html
+++ b/talks/index.html
@@ -53,7 +53,7 @@
         
     <tr>
         <td>78.</td>
-        <td data-location="53.904528, 27.561421" data-place="Janka Kupala National Theatre">JFuture 2019</td>
+        <td data-location="53.934067, 27.653719" data-place="VOKA Cinema">JFuture 2019</td>
         <td><a href="https://jfuture.dev">Purely Dysfunctional Data Structures</a></td>
         <td>16.11.2019</td>
         <td>Minsk/Belarus</td>
